# haskellbook

./: .gitmodules
Chapter06/: DayOfTheWeek.hs  DoesItTypeCheck.hs  EqInstances.hs  Trivial.hs
Chapter07/: CaseExpressions.hs  Exercises.hs  HOFs.hs  RegisteredUser.hs
Chapter08/: Exercises.hs
Chapter09/: Exercises.hs  Exercises_2.hs  Misc.hs
Chapter11/: AsPattern.hs  BinaryTree.hs  Exercises.hs  HuttonRazor.hs  VinegereCipher.hs  misc.hs
Chapter12/: Anamorphism.hs  EitherLib.hs  MaybeLib.hs  NaturalNumbers.hs  Person.hs  StringProcessing.hs
Chapter13/hangman/: hangman.cabal
Chapter13/hangman/.stack-work/: stack.sqlite3
Chapter13/hangman/.stack-work/ghci/a40171b2/: cabal_macros.h
Chapter13/hangman/.stack-work/odir/: Main.hi
Chapter13/hangman/src/: Main.hs
Chapter14/: IdentityCrisies.hs
Chapter14/quickcheck/: Lib.hs  Tests.hs  quickcheck.cabal
Chapter15/: Madness.hs  MaybeMonoid.hs  MonoidExercises.hs  MonoidQuickCheck.hs  Optional.hs  Semigroup.hs  misc.hs
Chapter16/: ChapterExercises.hs  HeavyLifting.hs  InstancesOfFunc.hs  Misc.hs  QuickCheckFunctor.hs  ReplaceExperiment.hs
Chapter17/: ApplicativeList.hs  ApplicativePropertyTesting.hs  Constant.hs  FixerUpper.hs  Identity.hs  Lookups.hs  MaybeApplicative.hs  Misc.hs  Validation.hs  ZipListMonoid.hs
Chapter18/: BadMonad.hs  ChapterExercises.hs  EitherMonad.hs  EitherMonadExercise.hs  KleisiComposition.hs  Misc.hs
Chapter20/: FoldableInstances.hs  LibraryFunctions.hs  Misc.hs
Chapter21/: AxingTediousCode.hs  ChapterExercises.hs  EitherTranversable.hs  HTTPRequests.hs  Misc.hs  NewMorse.hs  (+2 more)
(+51 files in other folders)
