name:                hangman
version:             0.1.0.0
synopsis:            Playing hangman
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Luccas
maintainer:          example@example.com
copyright:           2021 Luccas
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, data/dict.txt

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, split
