name:                quickcheck
version:             0.1.0.0
author:              Luccas Mateus
copyright:           2021 Luccas Mateus
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5

test-suite tests
  hs-source-dirs:      .
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
